fix: add agents/ fallback dir, log discovery, handle no-frontmatter files
Follow-up improvements to ProjectAgentScanner:
- Add `agents/` as a third fallback search directory (after .copilot/agents
  and .github/agents) for generic project agent layouts
- Log each discovered agent at INFO level for easier debugging
- Files without YAML frontmatter now return an AgentMode using the slug
  as the name (instead of returning null and silently skipping them)
- Extract copyAgentFile() helper to eliminate the nested try block flagged
  by SonarQube (java:S1141)
- Prefix all log messages with "ProjectAgentScanner:" for grep-ability
- Improve Javadoc to document all three search dirs and their priority

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>